--- a/output.css
+++ b/output.css
@@ -600,8 +600,12 @@ video {
   bottom: -3.5rem;
 }
 
-.-bottom-3 {
-  bottom: -0.75rem;
+.-bottom-5 {
+  bottom: -1.25rem;
+}
+
+.-top-3 {
+  top: -0.75rem;
 }
 
 .bottom-0 {
@@ -620,52 +624,20 @@ video {
   right: 0px;
 }
 
-.-bottom-6 {
-  bottom: -1.5rem;
-}
-
-.-bottom-4 {
-  bottom: -1rem;
-}
-
-.-bottom-5 {
-  bottom: -1.25rem;
-}
-
-.top-0 {
-  top: 0px;
+.right-2 {
+  right: 0.5rem;
 }
 
 .-z-10 {
   z-index: -10;
 }
 
-.z-20 {
-  z-index: 20;
+.-z-20 {
+  z-index: -20;
 }
 
 .z-30 {
   z-index: 30;
-}
-
-.z-40 {
-  z-index: 40;
-}
-
-.z-10 {
-  z-index: 10;
-}
-
-.z-0 {
-  z-index: 0;
-}
-
-.z-50 {
-  z-index: 50;
-}
-
-.-z-20 {
-  z-index: -20;
 }
 
 .m-auto {
@@ -721,20 +693,28 @@ video {
   height: 4rem;
 }
 
-.h-40 {
-  height: 10rem;
+.h-20 {
+  height: 5rem;
 }
 
-.h-\[104px\] {
-  height: 104px;
+.h-40 {
+  height: 10rem;
 }
 
 .h-\[70px\] {
   height: 70px;
 }
 
+.h-\[73px\] {
+  height: 73px;
+}
+
 .h-full {
   height: 100%;
+}
+
+.h-10 {
+  height: 2.5rem;
 }
 
 .w-10\/12 {
@@ -777,8 +757,20 @@ video {
   width: 72px;
 }
 
+.w-\[73px\] {
+  width: 73px;
+}
+
 .w-full {
   width: 100%;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .transform {
@@ -869,8 +861,25 @@ video {
   background-color: rgb(31 31 31 / var(--tw-bg-opacity));
 }
 
+.bg-lightGrey3 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 241 241 / var(--tw-bg-opacity));
+}
+
 .p-3 {
   padding: 0.75rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-16 {
@@ -994,6 +1003,11 @@ video {
   color: rgb(31 31 31 / var(--tw-text-opacity));
 }
 
+.text-lightGrey2 {
+  --tw-text-opacity: 1;
+  color: rgb(140 140 140 / var(--tw-text-opacity));
+}
+
 .text-mediumGrey {
   --tw-text-opacity: 1;
   color: rgb(84 84 84 / var(--tw-text-opacity));
@@ -1002,11 +1016,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-lightGrey2 {
-  --tw-text-opacity: 1;
-  color: rgb(140 140 140 / var(--tw-text-opacity));
 }
 
 .shadow-2xl {
@@ -1064,6 +1073,10 @@ video {
     height: 60px;
   }
 
+  .md\:h-\[73px\] {
+    height: 73px;
+  }
+
   .md\:w-3\/12 {
     width: 25%;
   }
@@ -1086,6 +1099,10 @@ video {
 
   .md\:w-full {
     width: 100%;
+  }
+
+  .md\:w-\[73px\] {
+    width: 73px;
   }
 
   .md\:flex-nowrap {
